xes:date enabled, tx vars accessable in log entry scope